--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,6 +7,7 @@
     <div ng-controller="MainController">
       <!-- The following is an example of two-way data binding -->
       <input type="text" ng-model='person'>
+      <button ng-click='saySurprise(person)'>Surprise!</button>
       <h1>Hello {{ person }}</h1>
       <ul>
         <li ng-repeat='letter in letters'> {{ letter }}</li>
@@ -15,5 +16,6 @@
   <h1>Hello {{ person }}</h1>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/controllers/main.controller.js"></script>
   </body>
 </html>
