handled the duplication issues in the list and cleared the input box upon creation of new todo

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,8 +5,11 @@
   </head>
   <body>
     <div ng-controller="MainController">
-      <!-- The following is an example of two-way data binding -->
-
+      <input type="text" ng-model='newTodo'>
+      <button ng-click='createTodo(newTodo)'>Add New Todo</button>
+      <ul>
+        <li ng-repeat='todo in todos track by $index'>{{ todo }}</li>
+      </ul>
     </div>
   <h1>Hello {{ person }}</h1>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
