--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,10 @@
       <input type="text" ng-model='newTodo'>
       <button ng-click='createTodo(newTodo)'>Add New Todo</button>
       <ul>
-        <li ng-repeat='todo in todos track by $index'>{{ todo }}</li>
+        <li ng-repeat='todo in todos track by $index'>
+          {{ todo }} {{ $index }}
+          <button ng-click='deleteTodo($index)'>&times;</button>
+        </li>
       </ul>
     </div>
   <h1>Hello {{ person }}</h1>
