added field functionality

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,7 +9,8 @@
       <button ng-click='createTodo(newTodo)'>Add New Todo</button>
       <ul>
         <li ng-repeat='todo in todos track by $index'>
-          {{ todo }} {{ $index }}
+          <input type="text" ng-show='isEditing' ng-model='todo'>
+          {{ todo }}
           <button ng-click='deleteTodo($index)'>&times;</button>
         </li>
       </ul>
